--- a/DevGames/app/src/main/res/layout/frag_model_list.xml
+++ b/DevGames/app/src/main/res/layout/frag_model_list.xml
@@ -5,7 +5,7 @@
   android:orientation="vertical"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:background="@color/white">
+  android:background="@color/almond_light">
 
   <ProgressBar
     android:id="@+id/refresh_layout"
