--- a/DevGames/app/src/main/res/layout/list_empty_view.xml
+++ b/DevGames/app/src/main/res/layout/list_empty_view.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:textAppearance="?android:attr/textAppearanceMedium"
     android:text="@string/list_no_items"
+    android:textColor="@color/mineral"
     android:id="@+id/text"
     android:gravity="center"
     android:layout_margin="@dimen/general_margin_padding"
