--- a/DevGames/app/src/main/res/layout/profile_fragment.xml
+++ b/DevGames/app/src/main/res/layout/profile_fragment.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/white">
+    android:background="@color/almond_light">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,7 +22,7 @@
                 android:layout_height="102dp"
                 android:contentDescription="@string/avatar"
                 android:id="@+id/avatar_view"
-                android:src="@drawable/no_photo" />
+                android:src="@drawable/no_profile_avatar" />
 
             <RelativeLayout
                 android:orientation="vertical"
@@ -38,7 +38,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:text="@string/loading"
-                    android:textColor="@color/cornflower_dark"
+                    android:textColor="@color/mineral"
                     android:textStyle="bold"
                     android:textSize="18sp"/>
 
@@ -46,7 +46,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:id="@+id/score_icon"
-                    android:src="@drawable/trophy"
+                    android:src="@drawable/ic_trophy"
                     android:layout_below="@+id/txt_name"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="8dp" />
@@ -57,7 +57,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:text="@string/loading"
-                    android:textColor="@color/cornflower"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:layout_marginStart="16dp"
@@ -73,7 +73,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:text="@string/score"
-                    android:textColor="@color/cornflower"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:enabled="false"
@@ -87,7 +87,7 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:id="@+id/project_icon"
-                    android:src="@drawable/project_folders"
+                    android:src="@drawable/ic_project_folders"
 
                     android:layout_below="@+id/score_icon"
                     android:layout_alignParentStart="false"
@@ -99,7 +99,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:text="@string/loading"
-                    android:textColor="@color/cornflower"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:layout_marginStart="16dp"
@@ -113,7 +113,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:text="@string/projects"
-                    android:textColor="@color/cornflower"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:gravity="center_vertical|end"
@@ -125,11 +125,11 @@
                     android:layout_width="24dp"
                     android:layout_height="24dp"
                     android:id="@+id/commit_icon"
-                    android:src="@drawable/git_commit"
+                    android:src="@drawable/ic_git_commit"
                     android:layout_gravity="bottom"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/project_icon"
-                    android:contentDescription="@string/commits" />
+                    android:contentDescription="@string/pushes" />
 
                 <TextView
                     android:id="@+id/txt_commits"
@@ -137,7 +137,7 @@
                     android:layout_height="24dp"
                     android:layout_gravity="center"
                     android:text="@string/loading"
-                    android:textColor="@color/cornflower"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:layout_marginStart="16dp"
@@ -151,8 +151,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="24dp"
                     android:layout_gravity="center"
-                    android:text="@string/commits"
-                    android:textColor="@color/cornflower"
+                    android:text="@string/pushes"
+                    android:textColor="@color/mineral"
                     android:textStyle="italic"
                     android:textSize="15sp"
                     android:layout_alignWithParentIfMissing="false"
@@ -169,7 +169,7 @@
             android:alpha="0.5"
             android:layout_width="fill_parent"
             android:layout_height="1px"
-            android:background="@color/cornflower_light"/>
+            android:background="@color/almond_dark"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -184,7 +184,7 @@
                 android:layout_gravity="center"
                 android:text="@string/issues"
                 android:paddingTop="7dp"
-                android:textColor="@color/cornflower_dark"
+                android:textColor="@color/mineral"
                 android:textStyle="italic"
                 android:textSize="15sp"/>
 
