--- a/DevGames/app/src/main/res/layout/project_listview_item.xml
+++ b/DevGames/app/src/main/res/layout/project_listview_item.xml
@@ -1,75 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content" android:background="@color/white">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="6dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/project_name"
-        android:text="@string/loading"
-        android:textSize="18sp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:textColor="@color/cornflower_dark" />
+    <ImageView
+        android:layout_width="@dimen/ic_avatar_size_small"
+        android:layout_height="@dimen/ic_avatar_size_small"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/keyline_1"
+        android:contentDescription="@string/avatar"
+        android:id="@+id/avatar_view"
+        android:src="@drawable/no_project_avatar" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/project_description"
-        android:text="@string/loading"
-        android:layout_marginStart="15dp"
-        android:textColor="@color/cornflower"
-        android:layout_below="@+id/project_name"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/keyline_2"
+        android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/project_score"
-        android:text="@string/loading"
-        android:layout_marginEnd="18dp"
-        android:textColor="@color/cornflower_light"
-        android:layout_above="@+id/project_description"
-        android:layout_alignParentEnd="true" />
+        <TextView
+            android:id="@+id/txt_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/loading"
+            android:textColor="@color/mineral"
+            android:textSize="16sp"
+            />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/project_dev_count"
-        android:text="@string/loading"
-        android:layout_below="@+id/project_description"
-        android:textColor="@color/cornflower"
-        android:layout_alignStart="@+id/project_description" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:baselineAligned="false">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_filler"
-        android:text="@string/list_view_explanation"
-        android:textColor="@color/cornflower"
-        android:layout_alignTop="@+id/project_dev_count"
-        android:layout_toEndOf="@+id/project_dev_count"
-        android:layout_alignParentEnd="false"
-        android:layout_marginStart="6sp"
-        android:layout_marginEnd="6sp" />
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/project_commit_count"
-        android:text="@string/loading"
-        android:textColor="@color/cornflower"
-        android:layout_alignTop="@+id/text_filler"
-        android:layout_toEndOf="@+id/text_filler" />
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/avatar"
+                    android:src="@drawable/ic_trophy" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text_filler2"
-        android:text="@string/commits"
-        android:textColor="@color/cornflower"
-        android:layout_alignTop="@+id/project_commit_count"
-        android:layout_toEndOf="@+id/project_commit_count"
-        android:layout_marginStart="6sp" />
+                <TextView
+                    android:id="@+id/txt_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="3dp"
+                    android:text="@string/loading"
+                    android:textColor="@color/mineral"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    />
 
-</RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="12dp"
+                    android:layout_height="12dp"
+                    android:layout_gravity="center_vertical"
+                    android:contentDescription="@string/avatar"
+                    android:src="@drawable/ic_git_commit" />
+
+                <TextView
+                    android:id="@+id/txt_developers"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="3dp"
+                    android:text="@string/loading"
+                    android:textColor="@color/mineral"
+                    android:textSize="12sp"
+                    android:textStyle="italic"
+                    />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/divider_thickness"
+        android:layout_marginStart="@dimen/keyline_2"
+        android:background="@color/whiskey_dark"
+        android:layout_gravity="bottom"
+        android:visibility="gone"
+        />
+
+</FrameLayout>
