--- a/DevGames/app/src/main/res/layout/project_listview_item.xml
+++ b/DevGames/app/src/main/res/layout/project_listview_item.xml
@@ -8,6 +8,8 @@
         android:layout_width="@dimen/ic_avatar_size_small"
         android:layout_height="@dimen/ic_avatar_size_small"
         android:layout_gravity="center_vertical"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="@dimen/keyline_1"
         android:contentDescription="@string/avatar"
         android:id="@+id/avatar_view"
