--- a/DevGames/app/src/main/res/layout/push_listview_item.xml
+++ b/DevGames/app/src/main/res/layout/push_listview_item.xml
@@ -34,6 +34,7 @@
                 android:text="@string/loading"
                 android:textColor="@color/mineral"
                 android:textSize="16sp"
+                android:layout_marginEnd="@dimen/keyline_1"
                 android:layout_row="0"
                 android:layout_column="17" />
 
