--- a/DevGames/app/src/main/res/layout/profile_fragment.xml
+++ b/DevGames/app/src/main/res/layout/profile_fragment.xml
@@ -13,13 +13,12 @@
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp"
-            android:weightSum="1">
+            android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="102dp"
-                android:layout_height="102dp"
+                android:layout_width="@dimen/ic_avatar_size_medium"
+                android:layout_height="@dimen/ic_avatar_size_medium"
+                android:layout_margin="@dimen/keyline_1"
                 android:contentDescription="@string/avatar"
                 android:id="@+id/avatar_view"
                 android:src="@drawable/no_profile_avatar" />
@@ -27,10 +26,8 @@
             <RelativeLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="15dp"
-                android:paddingEnd="15dp">
-
+                android:layout_marginTop="@dimen/keyline_1"
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/txt_name"
@@ -47,9 +44,11 @@
                     android:layout_height="24dp"
                     android:id="@+id/score_icon"
                     android:src="@drawable/ic_trophy"
+                    android:contentDescription="@string/score"
                     android:layout_below="@+id/txt_name"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="8dp" />
+                    android:layout_marginTop="8dp"
+                    />
 
                 <TextView
                     android:id="@+id/txt_score"
@@ -170,8 +169,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
             <TextView
                 android:id="@+id/txt_issues_title"
@@ -179,11 +178,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/issues"
-                android:paddingTop="7dp"
+                android:layout_margin="@dimen/keyline_1"
                 android:textColor="@color/mineral"
                 android:textStyle="italic"
                 android:textSize="15sp"/>
-
 
         </LinearLayout>
 
