--- a/DevGames/app/src/main/res/layout/push_listview_item.xml
+++ b/DevGames/app/src/main/res/layout/push_listview_item.xml
@@ -4,9 +4,18 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginStart="@dimen/keyline_1">
+
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="@dimen/keyline_1"
+        android:layout_marginStart="@dimen/keyline_2"
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         android:layout_gravity="center_vertical"
@@ -40,94 +49,99 @@
 
         </GridLayout>
 
-        <LinearLayout
+        <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:baselineAligned="false">
+            android:columnCount="3"
+            android:rowCount="1"
+            android:layout_gravity="fill_horizontal"
+            android:stretchColumns="0,1"
+            android:layout_marginEnd="@dimen/keyline_1"
+            >
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
+            <TableRow>
 
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/pushes"
-                    android:src="@drawable/ic_git_commit" />
-
-                <TextView
-                    android:id="@+id/txt_commits"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:paddingStart="3dp"
-                    android:paddingEnd="3dp"
-                    android:text="@string/loading"
-                    android:textColor="@color/mineral"
-                    android:textSize="12sp"
-                    android:textStyle="italic"
-                    />
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/pushes"
+                        android:src="@drawable/ic_git_commit" />
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/txt_commits"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:paddingStart="3dp"
+                        android:paddingEnd="3dp"
+                        android:text="@string/loading"
+                        android:textColor="@color/mineral"
+                        android:textSize="12sp"
+                        android:textStyle="italic"
+                        />
 
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/issues"
-                    android:src="@drawable/ic_bug" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txt_issues"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:paddingStart="3dp"
-                    android:paddingEnd="3dp"
-                    android:text="@string/loading"
-                    android:textColor="@color/mineral"
-                    android:textSize="12sp"
-                    android:textStyle="italic"
-                    />
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/issues"
+                        android:src="@drawable/ic_bug" />
 
-            <LinearLayout
-                android:layout_weight="1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content">
+                    <TextView
+                        android:id="@+id/txt_issues"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="end"
+                        android:paddingStart="3dp"
+                        android:paddingEnd="3dp"
+                        android:text="@string/loading"
+                        android:textColor="@color/mineral"
+                        android:textSize="12sp"
+                        android:textStyle="italic"
+                        />
 
-                <ImageView
-                    android:layout_width="12dp"
-                    android:layout_height="12dp"
-                    android:layout_gravity="center_vertical"
-                    android:contentDescription="@string/duplications"
-                    android:src="@drawable/ic_duplicate" />
+                </LinearLayout>
 
-                <TextView
-                    android:id="@+id/txt_duplications"
+                <LinearLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:paddingStart="3dp"
-                    android:paddingEnd="3dp"
-                    android:text="@string/loading"
-                    android:textColor="@color/mineral"
-                    android:textSize="12sp"
-                    android:textStyle="italic"
-                    />
+                    android:layout_height="wrap_content">
 
-            </LinearLayout>
+                    <ImageView
+                        android:layout_width="12dp"
+                        android:layout_height="12dp"
+                        android:layout_gravity="center_vertical"
+                        android:contentDescription="@string/duplications"
+                        android:src="@drawable/ic_duplicate" />
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/txt_duplications"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingStart="3dp"
+                        android:paddingEnd="3dp"
+                        android:text="@string/loading"
+                        android:textColor="@color/mineral"
+                        android:textSize="12sp"
+                        android:textStyle="italic"
+                        />
+
+                </LinearLayout>
+
+            </TableRow>
+
+        </TableLayout>
 
     </LinearLayout>
 
